--- a/desktop.ini
+++ b/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Screenshot 2025-08-15 010844.png=@Screenshot 2025-08-15 010844,0
 Screenshot 2025-08-12 035249.png=@Screenshot 2025-08-12 035249,0
+Screenshot 2025-08-15 011712.png=@Screenshot 2025-08-15 011712,0
