--- a/desktop.ini
+++ b/desktop.ini
@@ -2,3 +2,10 @@
 Screenshot 2025-08-15 010844.png=@Screenshot 2025-08-15 010844,0
 Screenshot 2025-08-12 035249.png=@Screenshot 2025-08-12 035249,0
 Screenshot 2025-08-15 011712.png=@Screenshot 2025-08-15 011712,0
+Screenshot 2025-08-15 013608.png=@Screenshot 2025-08-15 013608,0
+Screenshot 2025-08-15 013540.png=@Screenshot 2025-08-15 013540,0
+Screenshot 2025-08-15 013338.png=@Screenshot 2025-08-15 013338,0
+Screenshot 2025-08-15 013321.png=@Screenshot 2025-08-15 013321,0
+Screenshot 2025-08-15 015101.png=@Screenshot 2025-08-15 015101,0
+Screenshot 2025-08-15 015129.png=@Screenshot 2025-08-15 015129,0
+Screenshot 2025-08-15 014822.png=@Screenshot 2025-08-15 014822,0
